<resources>
    <string name="app_name">IPM Square</string>
    <string name="action_settings">Settings</string>
    <string name="need_help">Need Help?</string>
    <string name="oops">Oops!</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="english">English</string>
    <string name="hebrew">עברית</string>
    <string name="russian">русский</string>
    <string name="french">français</string>
    <string name="japanese">日本語</string>
    <string name="portuguese">Português</string>
    <string name="facebook_app_id" translatable="false">100423810382468</string>
    <string name="kwik_me_locale_id_key">kwik_me_locale_id_key</string>
    <string name="kwik_me_first_button_in_the_app">kwik_me_first_button_in_the_app</string>
    <string name="base_activity_back">Back</string>
    <string name="base_activity_next">Next</string>
    <string name="start_activity_sign_up">Get Started</string>
    <string name="start_activity_terms_and_conditions">&lt;font color=#a1a1a1&gt; By signing in you are agreeing to the&lt;//font&gt;&lt;b&gt; Terms \u0026 Conditions &lt;//b&gt;</string>
    <string name="start_activity_sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="start_activity_already_registered">Already Registered?&lt;//font&gt;&lt;b&gt; Log In&lt;//b&gt;</string>
    <string name="sign_up_with_facebook_not_supported_yet">Sign Up with Facebook not supported yet.</string>
    <string name="signup_activity_sign_up">Sign up</string>
    <string name="sign_up_activity_title">SIGN UP</string>
    <string name="sign_up_activity_phone_hint">Phone</string>
    <string name="sign_up_activity_name_hint">First Name</string>
    <string name="sign_up_activity_lase_name_hint">Last Name</string>
    <string name="sign_up_activity_login">Login</string>
    <string name="sign_up_activity_change">Change</string>
    <string name="sign_up_activity_name_is_empty">Name is empty</string>
    <string name="phone_is_empty">Phone is empty</string>
    <string name="sign_up_activity_invalid_email">Invalid E-Mail</string>
    <string name="last_name_is_empty">Last name is empty</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="log_in_activity_title">LOG IN</string>
    <string name="log_in_activity_log_in_button_label">Log in</string>
    <string name="log_in_activity_phone_hint">Phone</string>
    <string name="log_in_activity_phone_number_edit_text_invalid_error">Invalid number</string>
    <string name="verify_phone_activity_enter_the_code_we_sent_to">Enter the code we sent to</string>
    <string name="verify_phone_activity_resend_sms">Resend SMS</string>
    <string name="verify_phone_activity_change_phone_number">Change Phone Number</string>
    <string name="verify_phone_activity_title">SMS Validation</string>
    <string name="verify_phone_activity_please_enter_the_code">Please enter the code</string>
    <string name="network_password_activity_title">WiFi Connection</string>
    <string name="network_password_enter_password_hint">Enter Password</string>
    <string name="network_password_activity_hide">Hide</string>
    <string name="network_password_activity_show">Show</string>
    <string name="network_password_activity_open_wifi_settings">Open WiFi Settings</string>
    <string name="network_password_activity_continue">Continue</string>
    <string name="network_password_activity_no_wifi_error_message">It seems you are not connected to WiFi,\nPlease turn on th WiFi,\n&lt;b&gt;Be sure to connect to a 2.4GHz network &lt;//b&gt;</string>
    <string name="network_password_activity_wifi_5_g_error">It seems you are connected to 5Ghz WiFi network,\n&lt;b&gt;Please connect to 2.4GHz network&lt;//b&gt;</string>
    <string name="network_password_activity_enter_password_error_message">please enter a password</string>
    <string name="network_password_activity_enter_password_tip">Enter your Wi-Fi network details\nto be used by your trap</string>
    <string name="network_password_save_password">Save password</string>
    <string name="your_gps_seems_to_be_disabled">Your GPS seems to be disabled, Please turn it on for optimal experience.</string>
    <string name="password_is_empty">You haven\'t typed a password for your network</string>
    <string name="continue_without_password">Continue without password</string>
    <string name="type_a_password">Type a password</string>
    <string name="change_network">Change network</string>
    <string name="button_to_ap_activity_title">Connect The Trap</string>
    <string name="button_to_ap_activity_go_to_settings">Go To Settings</string>
    <string name="button_to_ap_activity_press_6_seconds">Press and hold the square for 5 seconds until it blinks and you hear a tone</string>
    <string name="button_to_ap_activity_press_start">Press ‘Next’ when your square blinks</string>
    <string name="button_to_ap_activity_teach_fail_message">Looks like we couldn’t connect the trap to the Wi-Fi network. Please check the following and try again:\n- Make sure that the Wi-Fi network is working\n- Make sure the Wi-Fi name and password you entered are correct</string>
    <string name="button_to_ap_activity_almost_there">Almost there...</string>
    <string name="button_to_ap_activity_connecting_your_button">Connecting to square...</string>
    <string name="button_to_ap_activity_connecting_to_server">Connecting to server...</string>
    <string name="button_to_ap_activity_connecting_button_to_user">Adding square button to user...</string>
    <string name="button_to_ap_activity_go_to_manual_title">Connect to kwik</string>
    <string name="button_to_ap_activity_go_to_manual_message">To continue please:\n\n1- Click \"Open WiFi settings\" below\n2- Connect to WiFi kwik_button\n3- Return back to the app</string>
    <string name="my_buttons_activity_exit_dialog_title">Closing</string>
    <string name="my_buttons_activity_exit_dialog_message">Are you sure you want to exit?</string>
    <string name="my_buttons_activity_serial_number">Square id Number :</string>
    <string name="my_buttons_activity_click_to_add_button">Press to add a trap</string>
    <string name="my_buttons_nav_menu_faq">F.A.Q</string>
    <string name="my_buttons_nav_menu_faq_url">https://www.ipm-square.com/faq</string>
    <string name="my_buttons_nav_menu_send_feedback">Send FeedBack</string>
    <string name="my_buttons_activity_nav_menu_communicate">Communicate</string>
    <string name="my_buttons_activity_nav_menu_settings">Settings</string>
    <string name="my_buttons_activity_nav_menu_order_history">Order History</string>
    <string name="my_buttons_activity_nav_menu_personal_details">Personal Details</string>
    <string name="my_buttons_activity_nav_menu_my_buttons">My Buttons</string>
    <string name="my_buttons_activity_main_label">My Buttons</string>
    <string name="my_buttons_nav_not_supported_yet_message">not supported yet</string>
    <string name="my_buttons_activity_settings_select_language">Select language</string>
    <string name="my_buttons_activity_nav_menu_settings_dialog_title">Personal Details</string>
    <string name="my_buttons_activity_add_wifi_network">Add Network</string>
    <string name="my_buttons_activity_click_to_edit_button">For update, Press the logo</string>
    <string name="log_out">Logout</string>
    <string name="remove_kwik_button">Delete Square</string>
    <string name="remove_kwik_button_message">Are you sure you want to delete this square?</string>
    <string name="address">Address</string>
    <string name="entrance">Entrance</string>
    <string name="apartment">Apartment</string>
    <string name="change_address">Change address</string>
    <string name="my_kwik_buttons_nav_menu_send_feedback">Send FeedBack</string>
    <string name="my_kwik_buttons_activity_nav_menu_communicate">Communicate</string>
    <string name="my_kwik_buttons_activity_nav_menu_change_language">Change Language</string>
    <string name="my_kwik_buttons_activity_nav_menu_order_history">Order History</string>
    <string name="my_kwik_buttons_activity_nav_menu_personal_details">Personal Details</string>
    <string name="clients_activity_title">Clients</string>
    <string name="edit_reorder">Edit reorder</string>
    <string name="button_settings">Trap settings</string>
    <string name="reorder_settings_activity_screen_title">Reorder Summary</string>
    <string name="reorder_settings_activity_list_title">Selected Products</string>
    <string name="edit">Edit</string>
    <string name="reorder_settings_activity_add_new_product">Add new</string>
    <string name="reorder_settings_activity_current_wifi">Your WiFi : </string>
    <string name="reorder_settings_activity_total_price">Total price : </string>
    <string name="reorder_settings_activity_general">General</string>
    <string name="reorder_settings_activity_send_to_kwik">Add network</string>
    <string name="quantity">Quantity: </string>
    <string name="price">Price: </string>
    <string name="good_job_activity_good_job">Great Job!</string>
    <string name="good_job_activity_the_button_is_successfully_connected">Now all you need to do is\nto activate the trap by\npressing the trap button\nand make sure you get a\nconfirmation message to\nyour phone.</string>
    <string name="good_job_activity_button_serial_number">Serial number:</string>
    <string name="good_job_activity_now">The Trap is now connected to network successfully and will operate on this network only</string>
    <string name="good_job_activity_kwik_order">Next</string>
    <string name="select_products_activity_title">Product Selection</string>
    <string name="select_products_activity_choose">Choose your preferences for reorder</string>
    <string name="select_products_activity_no_productd_choosen">No product selected, please select product</string>
    <string name="select_products_activity_minimum_price_prefix">"Minimum order is "</string>
    <string name="select_products_activity_minimum_price_suffix">, Please add products.</string>
    <string name="select_products_activity_edit_title">Order Update</string>
    <string name="select_products_activity_update_popup">&lt;b&gt;Update&lt;//b&gt; the products in this order and press \"Order\" on the top of the screen</string>
    <string name="order">Order</string>
    <string name="network_password_activity_help_message">Please make sure that this is a 2.4 GHz network</string>
    <string name="smart_network_dialog_title">Smart network switch</string>
    <string name="smart_network_dialog_sub_title">Please uncheck the Smart network switch checkbox on your phone’s WiFi settings screen, and then return to the app</string>
    <string name="wifi_settings">Go To Settings</string>
    <string name="wifi_settings_manual_mode_instructions">1.  Press the \"Go To Settings\" below\n\n2.  Connect to the network that ends with the name button_xxxxxx in WiFi settings\n\n3.  Return back to the app</string>
    <string name="log_in_activity_country_code_hint">Country</string>
    <string name="sign_up_activity_email_hint">E-Mail</string>
    <string name="signup_activity_easy_text_view">Easy Registration</string>
    <string name="wifi_settings_manual_mode_android_7_instructions">1.  Press the \"Go To Settings\" below\n\n2.  Connect to the network that ends with the name button_xxxxxx in WiFi settings\n\n3.  Press on the \"WiFi has No internet\" notification and select Yes to stay connected</string>
    <string name="wifi_settings_manual_mode_android_7_instructions_1">4. Return back here to complete the setup</string>
    <string name="wifi_settings_manual_mode_header">Now let’s connect your square\n to your Wi-Fi</string>
    <string name="good_job_activity_finish_button">Finish setup</string>
</resources>