<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

<LinearLayout
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.kwik.appsquare.SignupActivity"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_activity_easy_text_view"
        android:gravity="center"
        android:textColor="@color/kwik_me_blue_text_color"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_up_activity_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        >

        <EditText
            android:id="@+id/sign_up_activity_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_name_hint"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:lines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_up_activity_last_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/sign_up_activity_phone_input_layout_margin_top"
        >

        <EditText
            android:id="@+id/sign_up_activity_last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_lase_name_hint"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:lines="1"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/sign_up_activity_phone_input_layout_margin_top">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">
            <AutoCompleteTextView
                android:id="@+id/sign_up_activity_phone_prefix"
                android:layout_width="match_parent"
                android:gravity="bottom"
                android:hint="@string/log_in_activity_country_code_hint"
                android:layout_height="wrap_content"
                style="@style/KwikEditTextStyle"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_activity_phone_input_layout"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            >

            <EditText
                android:id="@+id/sign_up_activity_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_activity_phone_hint"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:lines="1"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_up_activity_email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/sign_up_activity_phone_input_layout_margin_top">

        <EditText
            android:id="@+id/sign_up_activity_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_email_hint"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:lines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginRight="9dp"
        android:layout_marginLeft = "9dp"
        android:id="@+id/sign_up_activity_next_button"
        android:layout_width="match_parent"
        android:layout_marginTop="150dp"
        android:layout_height="45dp"
        android:background="@drawable/start_button_selector_disabled"
        android:text="@string/signup_activity_sign_up"
        android:textSize="24sp"/>

</LinearLayout>
</ScrollView>
