<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/network_password_activity_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.kwik.appsquare.NetworkPasswordActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/network_password_activity_help_message"
        android:id="@+id/network_password_activity_help_tip_text_view"
        android:layout_below="@+id/network_password_activity_ssid_edit_text"
        android:layout_alignEnd="@+id/network_password_activity_edit_text_layout"
        android:layout_alignParentStart="true"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/network_password_activity_ssid_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/sg_wifi_credentials__wifi_icon_dark"
        android:textSize="16sp"
        style="@style/KwikEditTextStyle"
        android:gravity="center_horizontal"
        />

    <RelativeLayout
        android:id="@+id/network_password_activity_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/network_password_activity_help_tip_text_view">


        <EditText
            android:id="@+id/network_password_activity_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/network_password_enter_password_hint"
            android:drawableStart="@drawable/sg_wifi_credentials__lock_icon_dark"
            android:textSize="16sp"
            style="@style/KwikEditTextStyle"
            android:gravity="center_horizontal"
            >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/choose_network_hide_show_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_password_activity_hide"
            android:textSize="15sp"
            android:layout_alignBaseline="@+id/network_password_activity_password_edit_text"
            android:layout_alignBottom="@+id/network_password_activity_password_edit_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"/>


    </RelativeLayout>


    <TextView
        android:id="@+id/network_password_activity_help_link_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="helpClicked"
        android:gravity="center"
        android:textColor="@color/kwik_me_link_message"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/network_password_activity_enter_password_tip"
        android:id="@+id/network_password_activity_wifi_tip_text_view"
        android:gravity="center"
        android:layout_below="@+id/network_password_activity_edit_text_layout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/kwik_me_white"
        android:background="@drawable/rounder_corner_wifi_teach_background"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_password_save_password"
        android:id="@+id/network_password_activity_save_password_check_box"
        android:checked="true"
        android:layout_below="@+id/network_password_activity_wifi_tip_text_view"
        android:layout_centerHorizontal="true" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">
        <Button
            android:layout_marginRight="9dp"
            android:layout_marginLeft = "9dp"
            android:id="@+id/network_password_activity_next_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/start_button_selector"
            android:text="@string/base_activity_next"
            android:textSize="24sp"/>
    </LinearLayout>


</RelativeLayout>
